- clean up for newest eclipse release